--- a/HairSalon/Views/Home/index.cshtml
+++ b/HairSalon/Views/Home/index.cshtml
@@ -2,7 +2,6 @@
   Layout = "_Layout";
 }
 
-<div class="center">
-  <h1>Eau Claire's Salon</h1>
-
-</div>
+<h1>Eau Claire's Salon</h1>
+<p>@Html.ActionLink("See all stylists", "Index", "Stylists")</p>
+<p>@Html.ActionLink("See all clients", "Index", "Clients")</p>
