--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -3,20 +3,20 @@
 }
 
 @using HairSalon.Models;
-@model List<HairSalon.Models.Client>;
 
-<h1>Clients</h1>
+<h1>Stylists:</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3> No clients have been added yet!</h3>
+  <h3>No stylists have been added yet!</h3>
 }
 
-@foreach (Client client in Model)
+
+@foreach (Stylist stylist in Model)
 {
-  <li>@Html.ActionLink($"{client.Name}", "Details", new {id = client.ClientId}) |
-  @client.Stylist.Name </li>
+  <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
 }
 
-<p>@Html.ActionLink("Add new client", "Create")</p>
-<p>@Html.ActionLink("Go Back to Home", "Index", "Home")</p>
+</br>
+<li>@Html.ActionLink("Add new stylist", "Create")</li>
+<li>@Html.ActionLink("Home", "Index", "Home")</li>
